--- a/index.yaml
+++ b/index.yaml
@@ -2,7 +2,7 @@
 # https://github.com/srid/emanote/blob/master/default/index.yaml
 
 page:
-  siteTitle: Noteworthy Notes
+  siteTitle: Something to Note
 
 template:
   theme: indigo
