--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,12 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build emanote site 🔧
         run: |
-          mkdir -p output.docker 
-          docker run \
-            -e LANG=C.UTF-8 -e LC_ALL=C.UTF-8 \
-            --tmpfs /tmp \
-            -v $PWD:/data sridca/emanote \
-            emanote --layers /data gen /data/output.docker
+           mkdir -p output.docker 
+          docker run -e LANG=C.UTF-8 -e LC_ALL=C.UTF-8 -v $PWD:/data sridca/emanote emanote --layers /data gen /data/output.docker
           cp -r output.docker output  # Ditch docker created root-owned files
           bash output/_emanote-bin/compile-css
       - name: Deploy to gh-pages 🚀
@@ -24,4 +20,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./output/
-          cname: promragger.com 
+          #cname: promragger.com 
