--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,10 +11,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build emanote site 🔧
         run: |
-           mkdir -p output.docker 
-          docker run -e LANG=C.UTF-8 -e LC_ALL=C.UTF-8 -v $PWD:/data sridca/emanote emanote --layers /data gen /data/output.docker
-          cp -r output.docker output  # Ditch docker created root-owned files
-          bash output/_emanote-bin/compile-css
+          mkdir -p output.docker 
+          docker run \
+            -e LANG=C.UTF-8 -e LC_ALL=C.UTF-8 \
+            --tmpfs /tmp \
+            -v $PWD:/data sridca/emanote \
+            emanote --layers /data gen /data/output.docker
       - name: Deploy to gh-pages 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
