--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,8 @@ jobs:
             --tmpfs /tmp \
             -v $PWD:/data sridca/emanote \
             emanote --layers /data gen /data/output.docker
+          cp -r output.docker output  # Ditch docker created root-owned files
+          bash output/_emanote-bin/compile-css
       - name: Deploy to gh-pages 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
